scenarios/04-route-admission/http-ns-allowed/30-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: allowed-routes-ns-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: http-restricted
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-open
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
